--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -61,7 +61,7 @@ body {
 	font-size: 16px;
 	font-family: $font-body;
     background-color: $color-background;
-	color: $color-text;
+	color: $color-alt-background;
 }
 
 a {
