added space to bottom of file to allow for more scroll space

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -92,6 +92,7 @@ img {
 // --------------------------------------------------
 .table {
 	background-color: rgba($color-alt-background, .1);
+	margin-bottom: 40px;
 	@include boxShadow();
 
 	thead,
