made all current and future items and all their fields editable

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -86,6 +86,10 @@ img {
     text-shadow: 4px 4px 0px darken($color-primary, 30);
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 
 
 // --------------------------------------------------
