--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -177,74 +177,85 @@ img {
 // --------------------------------------------------
 // Add Item Form Styles
 // --------------------------------------------------
-.add-item-form {
-	margin-bottom: 40px;
+.add-item-wrapper {
+	width: 100%;
+	height: 100vh;
+	background-color: $color-background;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
 
-	.input-block {
-		width: 100%;
-		padding: 10px 0;
+	.add-item-form {
+		padding-top: 40px;
+		margin-bottom: 40px;
 
-		&:last-child {
-			clear: both;
-			padding-top: 20px;
-		}
+		.input-block {
+			width: 100%;
+			padding: 10px 0;
 
-		label {
-			display: block;
-			font-size: 0.8em;
-			color: $color-alt-background;
-			margin: 0 0 5px;
-		}
-
-		input {
-			background-color: rgba($color-alt-background, .1);
-			color: $color-alt-background;
-			border: 1px solid $color-border;
-			padding: 5px;
-
-			&:focus {
-				border: 1px solid $color-primary;
+			&:last-child {
+				clear: both;
+				padding-top: 20px;
 			}
 
-			&[type="submit"],
-			&[type="button"] {
-				background-color: $color-alt-background;
-				color: $color-background;
-				font-weight: bold;
-				padding: 10px 40px;
-				border: none;
-				cursor: pointer;
-				display: inline-block;
+			label {
+				display: block;
+				font-size: 0.8em;
+				color: $color-alt-background;
+				margin: 0 0 5px;
 			}
 
-			&.cancel {
-				background-color: $color-border;
-				color: $color-text;
-				font-weight: normal;
-			}
+			input {
+				background-color: rgba($color-alt-background, .1);
+				color: $color-alt-background;
+				border: 1px solid $color-border;
+				padding: 5px;
 
-			&.ng-dirty {
-				&.ng-invalid {
-					border: 1px solid $color-error;
+				&:focus {
+					border: 1px solid $color-primary;
+				}
+
+				&[type="submit"],
+				&[type="button"] {
+					background-color: $color-alt-background;
+					color: $color-background;
+					font-weight: bold;
+					padding: 10px 40px;
+					border: none;
+					cursor: pointer;
+					display: inline-block;
+				}
+
+				&.cancel {
+					background-color: $color-border;
+					color: $color-text;
+					font-weight: normal;
+				}
+
+				&.ng-dirty {
+					&.ng-invalid {
+						border: 1px solid $color-error;
+					}
 				}
 			}
-		}
 
-		&.quantity,
-		&.price,
-		&.discount {
-			width: 33.334%;
-			padding-right: 10px;
-			float: left;
-		}
+			&.quantity,
+			&.price,
+			&.discount {
+				width: 33.334%;
+				padding-right: 10px;
+				float: left;
+			}
 
-		&.discount {
-			padding-right: 0;
-			float: right;
-		}
+			&.discount {
+				padding-right: 0;
+				float: right;
+			}
 
-		.form-input {
-			width: 100%;
+			.form-input {
+				width: 100%;
+			}
 		}
 	}
 }
