--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -86,8 +86,92 @@ img {
     text-shadow: 4px 4px 0px darken($color-primary, 30);
 }
 
+.user-details {
+
+	.username {
+		font-family: $font-logo;
+		float: left;
+	}
+
+	.login-date {
+		font-size: 0.8em;
+		padding-top: 6px;
+		float: right;
+	}
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
+}
+
+
+
+// --------------------------------------------------
+// Global Form Styles
+// --------------------------------------------------
+form {
+
+	label {
+		display: block;
+		font-size: 0.8em;
+		color: $color-alt-background;
+		margin: 0 0 5px;
+	}
+
+	input {
+		background-color: rgba($color-alt-background, .1);
+		color: $color-alt-background;
+		border: 1px solid $color-border;
+		padding: 5px;
+
+		&:focus {
+			border: 1px solid $color-primary;
+		}
+
+		&[type="submit"],
+		&[type="button"] {
+			background-color: $color-alt-background;
+			color: $color-background;
+			font-weight: bold;
+			padding: 10px 40px;
+			border: none;
+			cursor: pointer;
+			display: inline-block;
+		}
+
+		&.cancel {
+			background-color: $color-border;
+			color: $color-text;
+			font-weight: normal;
+		}
+
+		&.ng-dirty {
+			&.ng-invalid {
+				border: 1px solid $color-error;
+			}
+		}
+	}
+}
+
+
+
+// --------------------------------------------------
+// Authentication Form Styles
+// --------------------------------------------------
+.authentication-form {
+
+	h4 {
+		padding-bottom: 10px;
+	}
+
+	label {
+		display: block;
+	}
+
+	input {
+		width: 100%;
+		margin-bottom: 20px;
+	}
 }
 
 
@@ -188,47 +272,6 @@ img {
 		&:last-child {
 			clear: both;
 			padding-top: 20px;
-		}
-
-		label {
-			display: block;
-			font-size: 0.8em;
-			color: $color-alt-background;
-			margin: 0 0 5px;
-		}
-
-		input {
-			background-color: rgba($color-alt-background, .1);
-			color: $color-alt-background;
-			border: 1px solid $color-border;
-			padding: 5px;
-
-			&:focus {
-				border: 1px solid $color-primary;
-			}
-
-			&[type="submit"],
-			&[type="button"] {
-				background-color: $color-alt-background;
-				color: $color-background;
-				font-weight: bold;
-				padding: 10px 40px;
-				border: none;
-				cursor: pointer;
-				display: inline-block;
-			}
-
-			&.cancel {
-				background-color: $color-border;
-				color: $color-text;
-				font-weight: normal;
-			}
-
-			&.ng-dirty {
-				&.ng-invalid {
-					border: 1px solid $color-error;
-				}
-			}
 		}
 
 		&.quantity,
