--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -93,6 +93,13 @@ img {
 		float: left;
 	}
 
+	.logout {
+		font-size: 0.8em;
+		font-style: italic;
+		padding: 6px 0 0 10px;
+		float: left;
+	}
+
 	.login-date {
 		font-size: 0.8em;
 		padding-top: 6px;
