--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -87,23 +87,37 @@ img {
 }
 
 .user-details {
+	padding-bottom: 6px;
+
+	&:after {
+		@include clearAfter();
+	}
 
 	.username {
 		font-family: $font-logo;
+		padding-top: 14px;
 		float: left;
 	}
 
-	.logout {
-		font-size: 0.8em;
-		font-style: italic;
-		padding: 6px 0 0 10px;
-		float: left;
-	}
-
-	.login-date {
-		font-size: 0.8em;
-		padding-top: 6px;
+	.user-details-right {
+		text-align: right;
 		float: right;
+
+		.logout {
+			font-size: 0.8em;
+			font-style: italic;
+			color: $color-primary;
+			margin: 0;
+			cursor: pointer;
+
+			&:hover {
+				color: darken($color-primary, 30);
+			}
+		}
+
+		.login-date {
+			font-size: 0.8em;
+		}
 	}
 }
 
